Merged Mraof/1.18 into Doro/Gutter